Обновлен тест и репозиторий